[project]
    name = "jyyslide-md"
    version = "0.1.0"
    description = ""
    authors = [{name = "zweix123", email = "1979803044@qq.com"}]
    readme = "README.md"
    license = {file = "LICENSE"}

dependencies = [
    "requests==2.28.2",
    "jinja2==3.1.2",
    "markdown==3.4.1",
    "pyquery==2.0.0",
    "pygments==2.14.0",
    "lxml==5.3.0",
    "pyyaml==6.0.1",
    "types-markdown==3.4.2.6",
    "types-requests==2.28.11.17",
    "types-pyyaml==6.0.12.12"
]
